Изменина секция Чем занимаються
добавлены подписи картинок

--- a/index.html
+++ b/index.html
@@ -107,14 +107,30 @@
           <h3 class="work-title">Чем мы занимаемся</h3>
           <ul class="photo">
             <li class="photo-item">
+              <div class="img">
               <img src="./images/img1.jpg" alt="смена дисплея" width="370" />
+              <div class="img-info">
+                <h4 img-title> Десктопные приложения </h4>
+              </div>
+            </div>
             </li>
             <li class="photo-item">
+              <div class="img">
               <img src="./images/img2.jpg" alt="Печатать" width="370" />
+              <div class="img-info">
+                <h4>Мобильные приложения</h4>
+              </div>
+            </div>
             </li>
             <li class="photo-item">
-              <img src="./images/img3.jpg" alt="Смена цвета" width="370" />
-            </li>
+              <div class="img">
+                <img src="./images/img3.jpg" alt="Смена цвета" width="370" />
+                <div class="img-info">
+                  <h4>Дизайнерские решения</h4>
+                </div>
+              </div>
+              </li>
+
           </ul>
         </div>
       </section>
