--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
         <nav>
           <ul class="page-nav">
             <li class="item">
-              <a class="page-link" href="./index.html">Студия</a>
+              <a class="page-link current" href="./index.html">Студия</a>
             </li>
             <li class="item">
-              <a class="page-link" href="./portfolio.html">Портфолио</a>
+              <a class="page-link current" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="item">
-              <a class="page-link" href="">Контакты</a>
+              <a class="page-link current " href="">Контакты</a>
+              
             </li>
           </ul>
         </nav>
