--- a/portfolio.html
+++ b/portfolio.html
@@ -29,13 +29,13 @@
   
           <ul class="page-nav" >
             <li class="item">
-              <a class="page-link current  " href="./index.html">Студия</a>
+              <a class="page-link   " href="./index.html">Студия</a>
             </li>
             <li class="item">
               <a class="page-link current" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="item">
-              <a class="page-link current" href="">Контакты</a>
+              <a class="page-link  href="">Контакты</a>
             </li >
           </ul>
         </nav>
