--- a/portfolio.html
+++ b/portfolio.html
@@ -269,6 +269,20 @@
             <use href="./images/icons.svg#linkedin"></use></a></li>
         </ul>
       </div>
+  <form class="join-us">
+        <p class="join-title-us">Подпишитесь на рассылку</p>
+        <div class="join-form">
+          <label for="mail" class="form-label visually-hidden">Почта</label>
+          <input type="email" class="join-us-mail" name="mail" id="mail" placeholder="E-mail">
+          <button type="submit" class="button-close">
+            <b class="button-text">Подписаться</b>
+            <svg class="form-icon" width="18" heigth="18">
+              <use href="./images/icons.svg#icon-send"></use>
+            </svg>
+          </button>
+
+        </div>
+      </form>
 
     </div>
     </footer>
